# docs/swagger.yaml
@@ -127,6 +127,33 @@ paths:
       summary: user account
       tags:
       - user
+  /user/profile/:id:
+    get:
+      consumes:
+        - application/json
+      description: user update
+      parameters:
+        - description: Bearer
+          in: header
+          name: Authorization
+          required: true
+          type: string
+        - description: userId
+          format: userId
+          in: query
+          name: userId
+          type: string
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      summary: user account
+      tags:
+        - user
 securityDefinitions:
   BasicAuth:
     type: basic
